Layout bug fixes

--- a/style.css
+++ b/style.css
@@ -38,10 +38,6 @@ body {
   color: var(--font-color);
 }
 
-i {
-
-}
-
 h2 {
   font-size: 1.4rem;
   font-weight: 600;
@@ -102,12 +98,9 @@ h3 {
 
 .profile__pic {
   margin: 0 auto;
-}
-
-.profile__pic > img {
   border-radius: 100%;
   width: 200px;
-  max-width: 90%;
+  max-width: 95%;
   border: 2px solid var(--theme-bg-color);
 }
 
@@ -117,8 +110,8 @@ h3 {
   width: fit-content;
   margin: 0 auto;
   padding-bottom: 15px;
-  justify-items: center;
-  column-gap: 15px;
+  justify-content: space-evenly;
+  gap: 10px;
 }
 
 .--icon {
